fix: corregir warnings de SonarQube S6204 y constantes duplicadas